--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -1,8 +1,8 @@
-name: Run
+name: Diff GTFS
 
 on:
-  schedule:
-    - cron: '15 * * * *' # Runs on the 15th minute of every hour
+  push:
+    branches: [main]
 
 jobs:
   lint-and-test:
