--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = {text = "Free"}
 requires-python = ">=3.14"
 dependencies = [
     "httpx (>=0.28.1,<0.29.0)",
-    "pytest (>=8.4.2,<9.0.0)"
+    "pytest (>=8.4.2,<9.0.0)",
+    "python-dateutil (>=2.9.0.post0,<3.0.0)"
 ]
 package-mode = false
 [build-system]
