--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -41,3 +41,11 @@ jobs:
 
       - name: Prepare GTFS
         run: poetry run python -m app.prepare_gtfs
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add data/gtfs
+          git commit -m "$(python -c 'from datetime import datetime; print(f\"GTFS diff update on {datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")}\")')"
+          git push
