--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -43,6 +43,8 @@ jobs:
         run: poetry run python -m app.prepare_gtfs
 
       - name: Commit and push
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
