--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -44,6 +44,12 @@ jobs:
       - name: Prepare GTFS
         run: poetry run python -m app.prepare_gtfs
 
+      - name: List workspace contents
+        run: ls -R $GITHUB_WORKSPACE
+      
+      - name: Show Git status
+        run: git status
+
       - name: Commit and push
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
