--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -56,7 +56,8 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
-          git add data/gtfs
+          git add data/gtfs/new
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
+          git commit -m "Update GTFS data" || echo "No changes to commit"
           git push origin HEAD
 
