--- a/.github/workflows/diff_gtfs.yml
+++ b/.github/workflows/diff_gtfs.yml
@@ -55,7 +55,7 @@ jobs:
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
           git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}
-          git add data/gtfs/new
+          git add data/gtfs
           git commit -m "Update GTFS data" || echo "No changes to commit"
           git push origin HEAD
 
