--- a/.github/workflows/gtfs_differ.yml
+++ b/.github/workflows/gtfs_differ.yml
@@ -78,6 +78,7 @@ jobs:
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+          git add LAST_MODIFIED
           git add data/gtfs
           git commit -m "Last modified: ${{ steps.version.outputs.tag }}" || echo "No changes to commit"
           git push origin HEAD:${{ github.ref }}
