--- a/.github/workflows/gtfs_differ.yml
+++ b/.github/workflows/gtfs_differ.yml
@@ -66,7 +66,7 @@ jobs:
         id: version
         if: steps.diff.outputs.next == 'true'
         run: |
-          raw=$(cat LAST_MODIFIED | tr '[:space:]')
+          raw=$(cat LAST_MODIFIED)
           tag=$(echo "$raw" | tr -cd '[:alnum:]._-')
           echo "tag=$tag" >> $GITHUB_OUTPUT
 
