--- a/.github/workflows/gtfs_differ.yml
+++ b/.github/workflows/gtfs_differ.yml
@@ -73,7 +73,7 @@ jobs:
       - name: Create a zip of the GTFS diff
         if: steps.diff.outputs.next == 'true'
         run: |
-          zip -r diff.zip data/gtfs/diff/*
+          (cd data/gtfs/diff && zip -r ../../diff.zip .)
 
       - name: Commit and push
         if: steps.diff.outputs.next == 'true'
